==> ubinos/esp8266at/source/esp8266at/arch/arm/cortexm/stm32xxxx/esp8266at_uart.c <==
#include <ubinos.h>
#include <assert.h>
#include "../../../../esp8266at_io.h"
#include "main.h"

esp8266at_err_t esp8266at_io_init(esp8266at_t *esp8266at)
{
    esp8266at_err_t esp_err;
    ubi_err_t ubi_err;
    HAL_StatusTypeDef stm_err;
    int r;
    uint8_t *buf;
    uint32_t len;
    assert(esp8266at != NULL);
    (void) r;
    (void) ubi_err;
    (void) stm_err;

    esp8266at->rx_overflow_count = 0;
    esp8266at->tx_busy = 0;

    ubi_err = cbuf_create(&esp8266at->io_read_buf, ESP8266AT_IO_READ_BUF_SIZE);
    assert(ubi_err == UBI_ERR_OK);
    ubi_err = cbuf_create(&esp8266at->io_write_buf, ESP8266AT_IO_WRITE_BUF_SIZE);
    assert(ubi_err == UBI_ERR_OK);
    r = mutex_create(&esp8266at->io_mutex);
    assert(r == 0);
    r = semb_create(&esp8266at->io_read_sem);
    assert(r == 0);
    r = semb_create(&esp8266at->io_write_sem);
    assert(r == 0);

    esp8266_uart_reset();

    if (!cbuf_is_full(esp8266at->io_read_buf))
    {
        buf = cbuf_get_tail_addr(esp8266at->io_read_buf);
        len = 1;
        HAL_UART_Receive_IT(&ESP8266_UART_HANDLE, buf, len);
    }

    esp_err = ESP8266AT_ERR_OK;

    return esp_err;
}

esp8266at_err_t esp8266at_io_deinit(esp8266at_t *esp8266at)
{
    esp8266at_err_t esp_err;
    ubi_err_t ubi_err;
    int r;
    assert(esp8266at != NULL);
    (void) r;
    (void) ubi_err;

    HAL_UART_DeInit(&ESP8266_UART_HANDLE);

    r = mutex_delete(&esp8266at->io_mutex);
    assert(r == 0);
    r = sem_delete(&esp8266at->io_read_sem);
    assert(r == 0);
    r = sem_delete(&esp8266at->io_write_sem);
    assert(r == 0);
    ubi_err = cbuf_delete(&esp8266at->io_read_buf);
    assert(ubi_err == UBI_ERR_OK);
    ubi_err = cbuf_delete(&esp8266at->io_write_buf);
    assert(ubi_err == UBI_ERR_OK);

    esp_err = ESP8266AT_ERR_OK;

    return esp_err;
}

esp8266at_err_t esp8266at_io_write_advan(esp8266at_t *esp8266at, uint8_t *buffer, uint32_t length, uint32_t *written, uint16_t io_option, uint32_t timeoutms,
        uint32_t *remain_timeoutms)
{
    esp8266at_err_t esp_err;
    ubi_err_t ubi_err;
    int r;
    uint8_t *buf;
    size_t len;
    uint32_t written_tmp;
    assert(esp8266at != NULL);
    assert(buffer != NULL);

    do
    {
        if ((io_option & ESP8266AT_IO_OPTION__TIMED) != 0)
        {
            r = mutex_lock_timedms(esp8266at->io_mutex, timeoutms);
            timeoutms = task_getremainingtimeoutms();
            if (r == UBIK_ERR__TIMEOUT)
            {
                esp_err = ESP8266AT_ERR_TIMEOUT;
                break;
            }
            assert(r == 0);
        }
        else
        {
            r = mutex_lock(esp8266at->io_mutex);
            assert(r == 0);
        }

        written_tmp = 0;

        ubi_err = cbuf_write(esp8266at->io_write_buf, buffer, length, &written_tmp);
        assert(ubi_err == UBI_ERR_OK || ubi_err == UBI_ERR_BUF_FULL);
        if (ubi_err == UBI_ERR_BUF_FULL)
        {
            esp_err = ESP8266AT_ERR_IO_ERROR;
        }
        else
        {
            esp_err = ESP8266AT_ERR_OK;
        }

        if (written_tmp > 0)
        {
            if (!esp8266at->tx_busy)
            {
                buf = cbuf_get_head_addr(esp8266at->io_write_buf);
                len = 1;
                esp8266at->tx_busy = 1;
                for (uint32_t i = 0;; i++)
                {
                    if (HAL_UART_Transmit_IT(&ESP8266_UART_HANDLE, buf, len) == HAL_OK)
                    {
                        break;
                    }
                    if (i >= 99)
                    {
                        esp_err = ESP8266AT_ERR_IO_ERROR;
                        break;
                    }
                }
            }
        }

        if (written)
        {
            *written = written_tmp;
        }

        if ((io_option & ESP8266AT_IO_OPTION__TIMED) != 0)
        {
            if (remain_timeoutms)
            {
                *remain_timeoutms = timeoutms;
            }
        }

        r = mutex_unlock(esp8266at->io_mutex);
        assert(r == 0);
    } while (0);

    return esp_err;
}
